# unifi-adguard-sync

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: adguard.py  config.py  diff.py  grace.py  main.py  mapping.py  sync.py  unifi.py
tests/: test_adguard.py  test_config.py  test_diff.py  test_grace.py  test_mapping.py  test_sync.py  test_unifi.py
